--- a/root/html/register.html
+++ b/root/html/register.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         
-        <div id="bottomDiv" onclick="cadastrar()">
+        <div id="bottomDiv" onclick="register()">
         <button id="registerButton" disabled>Criar Conta</button>
         <a href="../html/login.html">Já tenho conta.</a>
         </div>
