--- a/root/html/login.html
+++ b/root/html/login.html
@@ -14,10 +14,11 @@
         </div>
         
         <div id="bottomDiv">
-        <button>Entrar</button>
+        <button onclick="login()">Entrar</button>
         <a href="../html/register.html">Criar Conta.</a>
         </div>
         
     </main>
 </body>
+<script></script>
 </html>
